# agentforge-control-plane

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: __init__.py  agents.py  auth.py  config.py  evaluation.py  main.py  model_runtime.py  models.py  policy.py  repositories.py  service.py  telemetry.py  tools.py
docs/: agentcore-deployment.md
docs/runbooks/: production-readiness.md
evaluations/: golden_dataset.jsonl
infra/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
static/: app.js  index.html  styles.css
tests/: test_production_runtime.py  test_service.py
