[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge-control-plane"
version = "0.1.0"
description = "A governed multi-agent control plane demo with evaluations and observability."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<10.0", "httpx>=0.27,<1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
