[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge-control-plane"
version = "1.0.0"
description = "A production-grade governed multi-agent control plane for Amazon Bedrock AgentCore."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "boto3>=1.35,<2.0",
  "PyJWT[crypto]>=2.9,<3.0",
  "opentelemetry-api>=1.28,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<10.0", "httpx>=0.27,<1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
